[package]
name = "coxswain-e2e"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
license = { workspace = true }
publish = false

[lib]
name = "coxswain_e2e"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
flate2 = { workspace = true }
futures = { workspace = true }
base64 = { workspace = true }
gateway-api = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
rcgen = { workspace = true }
# `http2` adds h2c (.http2_prior_knowledge()) and h2-over-TLS ALPN support.
# `stream` adds reqwest::Body::wrap_stream, used to send an unknown-length
# (chunked, no Content-Length) request body that exercises the proxy's mid-stream
# max-body-size cap. Merged with the workspace reqwest feature set.
reqwest = { workspace = true, features = ["http2", "stream"] }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
