[package]
name = "coxswain-health"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
async-trait   = { workspace = true }
coxswain-core = { workspace = true }
http          = { workspace = true }
pingora-core  = { workspace = true }
