[package]
name = "coxswain-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
arc-swap = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
coxswain-core = { workspace = true }
pingora = { workspace = true, features = ["boringssl"] }
pingora-core = { workspace = true, features = ["boringssl"] }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true, features = ["boringssl"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "proxy_path"
harness = false
