[package]
name = "coxswain-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
failsafe = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
bytes = { workspace = true }
constant_time_eq = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
itoa = { workspace = true }
percent-encoding = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
zeroize = { workspace = true }
coxswain-cache = { workspace = true }
coxswain-core = { workspace = true }
pingora-cache = { workspace = true, features = ["boringssl"] }
pingora-core = { workspace = true, features = ["boringssl"] }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true, features = ["boringssl"] }
prometheus = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "proxy_path"
harness = false
