[package]
name = "coxswain-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
failsafe = { workspace = true }
governor = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
bcrypt = { workspace = true }
bytes = { workspace = true }
constant_time_eq = { workspace = true }
# gRPC ext_authz transport (#23): Envoy envoy.service.auth.v3 client. Cleartext
# tonic transport to the resolved auth pod — no TLS feature (no boringssl/ring
# clash with pingora).
envoy-types = { workspace = true }
tonic = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
itoa = { workspace = true }
# JWT verification (#441) — parses the resolved JWKS (pushed by the controller,
# never fetched here) and verifies bearer-token signatures. The sole
# JWT/crypto-parsing boundary in the crate.
jsonwebtoken = { workspace = true }
percent-encoding = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
tokio-stream = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
zeroize = { workspace = true }
coxswain-core = { workspace = true }
pingora-core = { workspace = true, features = ["boringssl"] }
pingora-http = { workspace = true }
pingora-proxy = { workspace = true, features = ["boringssl"] }
prometheus = { workspace = true }
thiserror = { workspace = true }
tls-parser = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
dashmap = { workspace = true }
ppp = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "proxy_path"
harness = false
