[package]
name = "coxswain-reflector"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
# Expose alpha Gateway API resources and experimental fields. For contributor/CI
# use only — never enabled in release builds. See docs/guides/gateway-api.md.
experimental = ["gateway-api-types/experimental"]

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
coxswain-core = { workspace = true }
futures = { workspace = true }
gateway-api-types = { workspace = true }
http = { workspace = true }
ipnet = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
parking_lot = { workspace = true }
pingora-core = { workspace = true }
prometheus = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
rustls = { workspace = true }
serde_yaml = { workspace = true }
tracing-test = { workspace = true }

[[bench]]
name = "convergence"
harness = false
